--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <section class="zoom">
-        <img src="/assets/mountain1.png" id="layer1">
-        <img src="/assets/mountain2.png" id="layer2">
-        <img src="/assets/text.png" id="text">
+        <img src="assets/mountain1.png" id="layer1">
+        <img src="assets/mountain2.png" id="layer2">
+        <img src="assets/text.png" id="text">
     </section>
     <section class="content">
         <h2>parallax scrolling using Javascript</h2>
