--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="assets/text.png" id="text">
     </section>
     <section class="content">
-        <h2>parallax scrolling using Javascript</h2>
+        <h2>Hello! This is vamshi Renikuntla. Software Developer</h2>
         <p>Lorem ipsum dolor sit amet, consectetur
             adipisicing elit. Alias enim voluptate ad,
             accusantium quisquam modi, quibusdam tempora eveniet praesentium facilis,
